# Multi-platform-Screencasting-Application

./: Cargo.toml  README.md  metadata.txt
recording_20241109_203739/: metadata.txt
recording_20241112_011658/: metadata.txt
recording_20241117_162031/: metadata.txt
recording_20241205_165959/: metadata.txt
recording_20241205_172447/: metadata.txt
recording_20241205_180924/: metadata.txt
recording_20241205_200318/: metadata.txt
recording_20241212_175043/: metadata.txt
recording_20241212_175052/: metadata.txt
recording_20250212_010137/: metadata.txt
recording_20250212_010157/: metadata.txt
recording_20250213_162751/: metadata.txt
recording_20250214_123242/: metadata.txt
recording_20250218_160226/: metadata.txt
recording_20250218_160247/: metadata.txt
recording_20250218_160813/: metadata.txt
recording_20250218_160944/: metadata.txt
recording_20250218_162047/: metadata.txt
recording_20250220_142122/: metadata.txt
recording_20250224_153428/: metadata.txt
recording_20250224_170444/: metadata.txt
recording_20250224_171826/: metadata.txt
recording_20250224_185817/: metadata.txt
recording_20250224_192115/: metadata.txt
recording_20250224_192323/: metadata.txt
src/: caster.rs  main.rs  receiver.rs  ui.rs
